improve transliteration